# universal_robot_urdf_wrapper

./: .gitignore  CMakeLists.txt  README.md  main.sh  package.xml
scripts/: utils.py  wrapper.py
scripts/config/: config.py
ur_desc/: ur10.urdf.xacro  ur10_robot.urdf.xacro  ur3.urdf.xacro  ur3_robot.urdf.xacro  ur5.urdf.xacro  ur5_robot.urdf.xacro
ur_e_desc/: ur10e.urdf.xacro  ur10e_robot.urdf.xacro  ur3e.urdf.xacro  ur3e_robot.urdf.xacro  ur5e.urdf.xacro  ur5e_robot.urdf.xacro
